Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
Riley Williams        Riley@Williams.Name               16 Nov 1998- 3 Jun 2002
Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Tue Jun  4 17:45:06 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that all source files that make up the actual kernel
	  source tree are clean to `splint -weak` with the exception of
	  the following, which still have some issues to deal with:

		arch/i86/drivers/char/serial.c
		arch/i86/mm/init.c
		kernel/printk.c
		net/ipv4/af_inet.c

	  The issue with kernel/printk.c is concerned with telling the
	  splint checker that printk() and panic() have a variable
	  number of parameters. The issues with the other three source
	  files are concerned with type mismatches that are not simple
	  to solve.

	* Verified that current codebase both compiles and boots on my
	  286 based laptop, with the exception that ktcp still fails.

		*** NOTE - KTCP DOES NOT CURRENTLY WORK ***

===============================================================================

Mon Jun  3 23:03:46 BST 2002	Riley Williams <Riley@Williams.Name>

	* This is ELKS 0.1.1-pre2

	* Completed ANSI'fication of many more source files.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop. However, one of the ANSI'fication changes