@@ -25,13 +25,23 @@ Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
 Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
 Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
 Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
-Riley Williams        Riley@Williams.Name               16 Nov 1998- 3 Jun 2002
+Riley Williams        Riley@Williams.Name               16 Nov 1998- 4 Jun 2002
 Roman Festchook       roma@polesye.net                  27 Oct 2001
 Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
 Simon Wood                                               6 Jan 2000-12 Jan 2000
 Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
+
+Tue Jun  4 19:43:50 BST 2002	Riley Williams <Riley@Williams.Name>
+
+	* Added debugging to arch/i856/drivers/char/tcpdev.c to try
+	  to locate the KTCP panic problem. Didn't help, but left the
+	  debugging in ready for future use if needed.
+	* Verified that current codebase both compiles and boots on my
+	  286 based laptop, with the exception that ktcp still fails.
+
+		*** NOTE - KTCP DOES NOT CURRENTLY WORK ***
 
 Tue Jun  4 17:45:06 BST 2002	Riley Williams <Riley@Williams.Name>
 
